[package]
name = "simple-redis"
version = "0.1.0"
authors = ["Ji Qin"]
publish = false
edition = "2021"

[dependencies]
bytes = "1.6.0"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "display"] }
enum_dispatch = "0.3.13"
ordered-float = "4.2.0"
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.86"
