[package]
name = "simple-redis"
version = "0.1.0"
authors = ["Ji Qin"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
dashmap = "5.5.3"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "display", "as_ref", "from"] }
enum_dispatch = "0.3.13"
futures = { version = "0.3.30", default-features = false }
lazy_static = "1.4.0"
ordered-float = "4.2.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "rt", "net", "io-util"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.86"
